--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -65,7 +65,7 @@ Rehab. Assists physician in determining patient's specific abilities and disabil
 <p>Jul 12, 2019 ... Speech Therapist SLP-PRN-Home Health Lorain, OH Therapy In Motion, LLC. (
 TIM) provides comprehensive rehabilitation therapy and management services?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AspireMedicalStaffing/743999692313997-pediatric-cfy-speech-language-pathologist-central-and-north-austin'>Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AspireMedicalStaffing/743999692313997-pediatric-cfy-speech-language-pathologist-central-and-north-austin'>Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -93,7 +93,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='http://shruboakinternational.applytojob.com/apply/5Sy0DELLFo/Speech-And-Language-Pathologist'>Speech and Language Pathologist - Shrub Oak International School - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://shruboakinternational.applytojob.com/apply/5Sy0DELLFo/Speech-And-Language-Pathologist'>Speech and Language Pathologist - Shrub Oak International School - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -109,7 +109,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4351801002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4351801002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Newark, DE</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -170,7 +170,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://phoebeministries.applytojob.com/apply/K4hkL9Kdo1/Speech-Therapist-Per-Diem-Wernersville-PA'>Speech Therapist - Per Diem - Wernersville, PA - Phoebe Ministries - Career Page</a></h5> 
+<h5><a href='http://phoebeministries.applytojob.com/apply/K4hkL9Kdo1/Speech-Therapist-Per-Diem-Wernersville-PA'>Speech Therapist - Per Diem - Wernersville, PA - Phoebe Ministries - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -204,7 +204,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 Pathologist - PRN in Manistee, Michigan. Review all of the job details and apply 
 today!</p>
 <hr/>
-<h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... WW - Heritage Manor West is now hiring a Part Time Speech Language 
 Pathologist - Shreveport, LA in Shreveport, Louisiana. Review all of the job 
@@ -219,7 +219,7 @@ details and?...</p>
 <p>4 days ago ... A NEW EXPERIENCE,. ALL THE WAY AROUND. At 360 Behavioral Health, we'
 re new. Yet extremely experienced. Isn't that what driven, curious, passionate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jhs.referrals.selectminds.com/jobs/speech-and-hearing-clinician-speech-therapy-per-diem-days-8510'>Speech and Hearing Clinician (Speech Therapy) / Per Diem (Days) - Jackson Health System Careers</a></h5> 
+<h5><a href='https://jhs.referrals.selectminds.com/jobs/speech-and-hearing-clinician-speech-therapy-per-diem-days-8510'>Speech and Hearing Clinician (Speech Therapy) / Per Diem (Days) - Jackson Health System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -253,18 +253,18 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='https://careers-symbria.icims.com/jobs/3881/speech-language-pathologist---slp---prn---home-health/job'>Speech Language Pathologist - SLP - PRN - Home Health in ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-symbria.icims.com/jobs/3881/speech-language-pathologist---slp---prn---home-health/job'>Speech Language Pathologist - SLP - PRN - Home Health in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Marquardt Home and Community Based Services Inc is now hiring a Speech 
 Language Pathologist - SLP - PRN - Home Health in Watertown, Wisconsin.</p>
 <hr/>
-<h5><a href='https://careers-healthpro-rehab.icims.com/jobs/23155/full-time-speech-language-pathologist-%28slp%29--%245%2C000-bonus/job'>Full-time Speech Language Pathologist (SLP)- $5000 Bonus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-healthpro-rehab.icims.com/jobs/23155/full-time-speech-language-pathologist-%28slp%29--%245%2C000-bonus/job'>Full-time Speech Language Pathologist (SLP)- $5000 Bonus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Coos County Nursing Home is now hiring a Full-time Speech Language 
 Pathologist (SLP)- $5000 Bonus in Berlin, New Hampshire. Review all of the job 
 details?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
+<h5><a href='https://jobs.jobvite.com/accentcare/job/o2P09fwK'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN DeSoto TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -417,7 +417,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4338876002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4338876002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
